--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "cloudinary-video-player": "^2.0.2",
     "consola": "^3.2.3",
+    "framer-motion": "^11.2.6",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.2",
+    "react-router-dom": "^6.23.1",
     "sass": "^1.77.2"
   },
   "devDependencies": {
