--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "cloudinary-video-player": "^2.0.2",
     "consola": "^3.2.3",
     "framer-motion": "^11.2.6",
+    "lottie-react": "^2.4.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-form-stepper": "^2.0.3",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.1",
+    "react-scroll-trigger": "^0.6.14",
     "sass": "^1.77.2",
     "styled-components": "^6.1.11"
   },
