--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@pixi/react": "^7.1.2",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "cloudinary-video-player": "^2.0.2",
     "consola": "^3.2.3",
     "framer-motion": "^11.2.6",
+    "hero-slider": "^3.2.1",
     "lottie-react": "^2.4.0",
     "node-sass": "^9.0.0",
+    "pixi.js": "^8.1.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
